# netz

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/netz/: adjacency_list.hpp  property_map.hpp
test/: adjacency_list.cpp  propert_map.cpp  property_map.cpp
